# AIToolEval

./: .gitignore  pyproject.toml
cli/: main.py
doc/: architecture.md  plan.md  usage.md
src/task_eval/: config.py  models.py
src/task_eval/db/: store.py
src/task_eval/report/: generator.py
src/task_eval/runner/: evaluator.py  task_loader.py
tasks/ini-parser-simple/: task.yaml
tasks/ini-parser-simple/prompts/: standard.md  structured.md
tasks/tinyframe-simple/: task.yaml
tasks/tinyframe-simple/prompts/: standard.md
tasks/zstd-630/: task.yaml
tasks/zstd-630/prompts/: standard.md  structured.md
tests/: test_evaluator.py  test_models.py  test_store.py  test_task_loader.py
